Logo position on mobile is fixed. Message appearance is updated. Prefixes are implemented.

--- a/css/footer.css
+++ b/css/footer.css
@@ -3,12 +3,14 @@ html, body {
 }
 
 .page-wrapper {
+    display: -webkit-flex;
     display: flex;
     flex-direction: column;
     height: 100%;
 }
 
 .content {
+    -webkit-flex: 1 0 auto;
     flex: 1 0 auto;
 }
 
