--- a/css/homepage.css
+++ b/css/homepage.css
@@ -57,6 +57,8 @@ body {
     left: 50%;
     padding: 3px 0;
     position: absolute;
+    -webkit-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
     transform: translateX(-50%);
 }
 
@@ -70,6 +72,8 @@ body {
     max-width: 350px;
     position: absolute;
     top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
     width: 90%;
 }
@@ -84,6 +88,8 @@ body {
     left: 50%;
     position: absolute;
     top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
     width: 250px;
     z-index: 1;
@@ -126,5 +132,17 @@ body {
 
     .menu.active + .page-wrapper .mobile-overlay {
         display: block;
+    }
+}
+
+@media (max-width: 375px) {
+    .page-wrapper .content header .logo-container {
+        left: unset;
+        height: 32px;
+        padding: 8px 0;
+        right: 5px;
+        -webkit-transform: none;
+        -ms-transform: none;
+        transform: none;
     }
 }
