--- a/css/radial-slider.css
+++ b/css/radial-slider.css
@@ -2,6 +2,8 @@
     position: absolute;
     top: 50%;
     left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
     height: 300px;
     width: 300px;
@@ -33,6 +35,8 @@
     left: 47.5%;
     position: absolute;
     top: 0;
+    -webkit-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
     transform: rotate(0deg);
     transform-origin: center bottom;
     width: 5%;
@@ -47,6 +51,8 @@
     height: 0;
     padding-bottom: 200%;
     position: absolute;
+    -webkit-transform: translate3d(-25%, -25%, 0);
+    -ms-transform: translate3d(-25%, -25%, 0);
     transform: translate3d(-25%, -25%, 0);
     width: 200%;
 }
